Added fixes: - Fix rebase errors - Added unit tests for ExpressionConverter - Fix checkstyle - Address comments